--- a/style.css
+++ b/style.css
@@ -9,3 +9,84 @@
 }
 
 
+body {
+  background-color: var(--bg_main)
+}
+
+#main {
+  
+  font-size: 300%;
+  color: var(--text_light);
+  text-shadow: rgb(10, 1, 0) 1px 2px 3px;
+
+  
+}
+
+#formulaire{
+  background-color: var(--bg_main);
+  color: white;
+  border: none;
+  border-bottom: 1px solid white;
+  font-size: 20px;
+}
+
+#btn {
+  background-color: var(--red);
+  color: var(--text_light);
+  border-radius: 5px ;
+  padding: 2px ;
+  font-size: 20px ;
+  
+}
+
+.sect{
+  background-color: white;
+  border-radius: 25px;
+}
+
+@media screen and (min-width: 0px) {
+  .sect {
+    background-color: green;
+    width: 200px;
+    height: 200px;
+  }
+  #btn {
+    width: 300px;
+    height: 40px;
+  }
+  }
+
+
+
+@media screen and (min-width: 500px) {
+  .sect {
+    background-color: blue;
+    width: 200px;
+    height: 300px;
+    }
+    #btn{
+      width: 100px ;
+    }
+  }
+
+  @media screen and (min-width: 700px) {
+    .sect {
+      background-color: purple;
+      width: 250px;
+      height: 300px;
+      }
+      #btn{
+        width: 100px ;
+      }
+    }
+
+    @media screen and (min-width: 1000px) {
+      .sect {
+        background-color: yellow;
+        width: 300px;
+        height: 300px;
+        }
+        #btn{
+          width: 100px ;
+        }
+      }
